--- a/frontend/angular/movie/src/app/login/login.component.html
+++ b/frontend/angular/movie/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<button (click)="login()">Login</button>
+<div class="form-container">
+  <form>
+    <label>Username</label>
+    <input type="text" placeholder="Username"/>
+    <label>Password</label>
+    <input type="text" placeholder="Password"/>
+    <button (click)="login()">Login</button>
+  </form>
+</div>
