--- a/frontend/angular/movie/src/app/app.component.css
+++ b/frontend/angular/movie/src/app/app.component.css
@@ -1,3 +1,24 @@
-
+div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+div nav {
+  width: 100%;
+  display: flex;
+}
+div nav button {
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+  margin-left: auto;
+  padding: 5px;
+}
+div .app-container {
+  width: 100%;
+}
 
 /*# sourceMappingURL=app.component.css.map */
