--- a/frontend/angular/movie/src/app/login/login.component.css
+++ b/frontend/angular/movie/src/app/login/login.component.css
@@ -1,3 +1,45 @@
-
+.form-container {
+  display: flex;
+  width: 300px;
+  height: 300px;
+  justify-content: center;
+  border-radius: 5px;
+  background-color: #5E8CFA;
+  color: whitesmoke;
+}
+.form-container form {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.form-container form label {
+  width: 90%;
+  margin: 5px 0;
+}
+.form-container form input {
+  width: 90%;
+  margin: 5px 0;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+}
+.form-container form button {
+  width: 95%;
+  margin: 20px 0;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  color: whitesmoke;
+  background-color: #3156AD;
+  transition: 200ms ease-in background-color;
+}
+.form-container form button:hover {
+  transition: 200ms ease-in background-color;
+  background-color: #7AA2FF;
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=login.component.css.map */
