--- a/frontend/angular/movie/src/styles.css
+++ b/frontend/angular/movie/src/styles.css
@@ -1,3 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #FACC5F;
+}
+
+.root-container {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
