--- a/frontend/angular/movie/src/styles.scss
+++ b/frontend/angular/movie/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+$dark_blue: #3156AD;
+$medium_blue: #7AA2FF;
+$light_blue: #5E8CFA;
+$dark_brown: #AD831F;
+$light_brown: #FACC5F;
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: $light_brown;
+}
+
+.root-container {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
